--- a/package.xml
+++ b/package.xml
@@ -7,6 +7,7 @@
     including using messages, servers, parameters, etc. These tutorials are compatible with the nodes in roscpp_tutorial.
   </description>
   <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
+  <maintainer email="v.mayoralv@gmail.com">Víctor Mayoral Vilches</maintainer>
   <license>BSD</license>
 
   <url type="website">http://www.ros.org/wiki/rospy_tutorials</url>
